use src/test/groovy instead of src/test